--- a/new.html
+++ b/new.html
@@ -183,6 +183,6 @@ With all my love,
             gl_FragColor = vec4(1. - C, 1. - a);
         }
     </script>
-    <script src="untoldcodding.js"></script>
+    <script src="pk.js"></script>
   </body>
 </html>
